--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,3 +1,95 @@
-ul{
+body {
+  font-family: 'Pridi';
+  box-sizing: content-box;
+}
+
+.logo {
+  position: absolute;
+  top: 0;
+  left: 5;
+  height: auto;
+  width: 25%;
+}
+
+li {
+  font-size: 1.4em;
+}
+
+ul {
   list-style: none;
+  margin: 0px;
+  padding: 5px;
+}
+
+input[type=submit] {
+  -webkit-appearance: none;
+  margin-top: 10px;
+  width: 20%;
+  height: 35px;
+  font-size: 1.4em;
+  font-family: 'Pridi';
+  background-color: #D8DDDE;
+  border-radius: 3px;
+}
+
+input[type=text] {
+  border: none;
+  border-bottom: 2px solid black;
+  width: 20%;
+  height: 30px;
+  font-size: 1.4em;
+}
+
+input:focus {
+  outline: white;
+}
+
+label {
+  font-size: 1.2em;
+}
+
+.list-div {
+  display: inline-block;
+  margin: 20px;
+  width: 30%;
+}
+
+#list-container {
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 20px;
+}
+
+form {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+button {
+  -webkit-appearance: none;
+  width: 50%;
+  height: 30px;
+  font-size: 1.2em;
+  font-family: 'Pridi';
+  color: white;
+}
+
+button:focus {
+  outline: white;
+}
+
+.red {
+  background-color: #C6212F;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.green {
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  background-color: green;
 }
